{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 458,
  "lineage": "4900495a-9e46-9d2b-67f3-ddc93d2918a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00e63d1ca999d9348",
            "domain": "vpc",
            "id": "eipalloc-05ac9460f083512ec",
            "instance": "i-0567473386a56cb75",
            "network_interface": "eni-0258653ce0ecd1e60",
            "private_dns": "ip-10-0-0-36.ec2.internal",
            "private_ip": "10.0.0.36",
            "public_dns": "ec2-3-231-5-245.compute-1.amazonaws.com",
            "public_ip": "3.231.5.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Ichihara_instance",
            "aws_key_pair.ichihara",
            "aws_security_group.ichihara_security_group",
            "aws_subnet.ichihara_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ichihara_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e58f8044c7f8ad1",
            "arn": "arn:aws:ec2:us-east-1:811161276891:instance/i-0567473386a56cb75",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0567473386a56cb75",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ichihara",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0258653ce0ecd1e60",
            "private_dns": "ip-10-0-0-36.ec2.internal",
            "private_ip": "10.0.0.36",
            "public_ip": "54.86.175.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0ec5af82fea8e51df",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07028f89979ffd800",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065c1ada6a87765f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.ichihara",
            "aws_security_group.ichihara_security_group",
            "aws_subnet.ichihara_Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ichihara_GateWay",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:internet-gateway/igw-0805c88b157527a73",
            "id": "igw-0805c88b157527a73",
            "owner_id": "811161276891",
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ichihara_Route_Table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bce7c31d1d4d8355",
            "owner_id": "811161276891",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0805c88b157527a73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_internet_gateway.ichihara_GateWay",
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e53f3168674dcc",
            "route_table_id": "rtb-0bce7c31d1d4d8355",
            "subnet_id": "subnet-07028f89979ffd800"
          },
          "dependencies": [
            "aws_internet_gateway.ichihara_GateWay",
            "aws_route_table.ichihara_Route_Table",
            "aws_subnet.ichihara_Subnet",
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_purchase_app_RDS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:security-group/sg-065592a484172d923",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065592a484172d923",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG_for_purchase_app_RDS",
            "name_prefix": null,
            "owner_id": "811161276891",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ichihara_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:security-group/sg-065c1ada6a87765f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065c1ada6a87765f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ichihara_security_group",
            "name_prefix": null,
            "owner_id": "811161276891",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ichihara_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:subnet/subnet-07028f89979ffd800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07028f89979ffd800",
            "map_public_ip_on_launch": false,
            "owner_id": "811161276891",
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "purchase_app_RDS1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:subnet/subnet-0446431294ee965fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0446431294ee965fb",
            "map_public_ip_on_launch": false,
            "owner_id": "811161276891",
            "tags": {
              "Name": "private-purchase_app_RDS1"
            },
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "purchase_app_RDS2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:subnet/subnet-08676cb62ad70d16c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08676cb62ad70d16c",
            "map_public_ip_on_launch": false,
            "owner_id": "811161276891",
            "tags": {
              "Name": "private-purchase_app_RDS2"
            },
            "vpc_id": "vpc-03c969176d2f118e0"
          },
          "dependencies": [
            "aws_vpc.ichihara_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ichihara_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:811161276891:vpc/vpc-03c969176d2f118e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf19a8f5429e92fa",
            "default_route_table_id": "rtb-0c7c7eaed00f7dc51",
            "default_security_group_id": "sg-0ac9c043c1ca39159",
            "dhcp_options_id": "dopt-8f34fff5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-03c969176d2f118e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7c7eaed00f7dc51",
            "owner_id": "811161276891",
            "tags": {
              "Name": "ichihara_VPC"
            }
          }
        }
      ]
    }
  ]
}